--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,38 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<!-- Standard favicon -->
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="shortcut icon" href="/favicon.ico">
+
+		<!-- Apple Touch Icons -->
+		<link rel="apple-touch-icon" sizes="120x120" href="/apple-touch-icon-120x120.png">
+		<link rel="apple-touch-icon" sizes="152x152" href="/apple-touch-icon-152x152.png">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+
+		<!-- Android Chrome -->
+		<link rel="icon" type="image/png" sizes="72x72" href="/android-chrome-72x72.png">
+		<link rel="icon" type="image/png" sizes="96x96" href="/android-chrome-96x96.png">
+		<link rel="icon" type="image/png" sizes="192x192" href="/android-chrome-192x192.png">
+		<link rel="icon" type="image/png" sizes="512x512" href="/android-chrome-512x512.png">
+
+		<!-- Windows -->
+		<meta name="msapplication-TileImage" content="/mstile-144x144.png">
+		<meta name="msapplication-TileColor" content="#ffffff">
+		<meta name="msapplication-config" content="/browserconfig.xml">
+
+		<!-- Web App Manifest -->
+		<link rel="manifest" href="/site.webmanifest">
+
+		<!-- Theme colors -->
+		<meta name="theme-color" content="#ffffff">
+		<meta name="msapplication-navbutton-color" content="#ffffff">
+		<meta name="apple-mobile-web-app-status-bar-style" content="default">		
+
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 		<script>
 			// Set theme based on system preference
 			if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
