--- a/src/app.html
+++ b/src/app.html
@@ -17,6 +17,7 @@
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Work+Sans:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+		<script defer src="https://umami.damiansoto.me/script.js" data-website-id="4e1159f8-c7ae-4b81-918c-8ab1e0f1be2b" data-domains="rooster.social"></script>
 		<script>
 			// Set theme based on system preference
 			if (window.matchMedia('(prefers-color-scheme: dark)').matches) {
